{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 128,
  "lineage": "30803311-277e-d7c9-f0bc-445a69231dc3",
  "resources": [
    {
      "module": "module.ec2-bastion-public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058a8a5ab36292159",
            "arn": "arn:aws:ec2:us-east-2:761014375856:instance/i-028b23d56d4f89355",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028b23d56d4f89355",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd6c06a3e5a3488c",
            "private_dns": "ip-10-232-44-241.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.232.44.241",
            "public_dns": "ec2-3-135-190-120.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.190.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a098566d5ceb11e1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abc9f37eae065a18",
            "tags": {
              "Name": "ec2-bastion-public",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "tags_all": {
              "Name": "ec2-bastion-public",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009c2eb6c565167d1"
            ]
          },
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.IGW-DATACOSMO",
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.nat-gateway.aws_nat_gateway.NGW-DATACOSMO",
            "module.route-table.aws_route_table.RT-PRIVATE-DATACOSMO",
            "module.route-table.aws_route_table.RT-PUBLIC-DATACOSMO",
            "module.route-table.aws_route_table_association.RT-PRIVATE-DATACOSMO-1-a",
            "module.route-table.aws_route_table_association.RT-PRIVATE-DATACOSMO-2-b",
            "module.route-table.aws_route_table_association.RT-PUBLIC-DATACOSMO-1-a",
            "module.route-table.aws_route_table_association.RT-PUBLIC-DATACOSMO-2-b",
            "module.sg_public.aws_security_group.this",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-vpn-server-private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058a8a5ab36292159",
            "arn": "arn:aws:ec2:us-east-2:761014375856:instance/i-0667d516a92a18260",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0667d516a92a18260",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbb0cb157a3d0ea2",
            "private_dns": "ip-10-232-46-35.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.232.46.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f151b08e4118bbda",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb89d1a624a599a4",
            "tags": {
              "Name": "ec2-vpn-server-private",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "tags_all": {
              "Name": "ec2-vpn-server-private",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07af92cf55725da0a"
            ]
          },
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.IGW-DATACOSMO",
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.nat-gateway.aws_nat_gateway.NGW-DATACOSMO",
            "module.route-table.aws_route_table.RT-PRIVATE-DATACOSMO",
            "module.route-table.aws_route_table.RT-PUBLIC-DATACOSMO",
            "module.route-table.aws_route_table_association.RT-PRIVATE-DATACOSMO-1-a",
            "module.route-table.aws_route_table_association.RT-PRIVATE-DATACOSMO-2-b",
            "module.route-table.aws_route_table_association.RT-PUBLIC-DATACOSMO-1-a",
            "module.route-table.aws_route_table_association.RT-PUBLIC-DATACOSMO-2-b",
            "module.sg_private.aws_security_group.this",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.internet-gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-DATACOSMO",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:internet-gateway/igw-0a8ee69d03eebbac3",
            "id": "igw-0a8ee69d03eebbac3",
            "owner_id": "761014375856",
            "tags": {
              "Environment": "Development",
              "Name": "IGW-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "IGW-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "dependencies": [
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-DATACOSMO",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b77c1c3f5f2ef9d",
            "arn": "arn:aws:ec2:us-east-2:761014375856:elastic-ip/eipalloc-04b77c1c3f5f2ef9d",
            "association_id": "eipassoc-0825896034f7adc54",
            "domain": "vpc",
            "id": "eipalloc-04b77c1c3f5f2ef9d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ef4c2ee4bb30d643",
            "private_dns": "ip-10-232-44-204.us-east-2.compute.internal",
            "private_ip": "10.232.44.204",
            "public_dns": "ec2-18-216-53-96.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.53.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "NAT-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "NAT-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NGW-DATACOSMO",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b77c1c3f5f2ef9d",
            "association_id": "eipassoc-0825896034f7adc54",
            "connectivity_type": "public",
            "id": "nat-033e9990d30393bab",
            "network_interface_id": "eni-0ef4c2ee4bb30d643",
            "private_ip": "10.232.44.204",
            "public_ip": "18.216.53.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0abc9f37eae065a18",
            "tags": {
              "Environment": "Development",
              "Name": "NGW-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "NGW-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            }
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-PRIVATE-DATACOSMO",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:route-table/rtb-0255c1458dda8eff6",
            "id": "rtb-0255c1458dda8eff6",
            "owner_id": "761014375856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-033e9990d30393bab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "RT-PRIVATE-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "RT-PRIVATE-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.nat-gateway.aws_nat_gateway.NGW-DATACOSMO",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-PUBLIC-DATACOSMO",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:route-table/rtb-07b32df3b7d45807f",
            "id": "rtb-07b32df3b7d45807f",
            "owner_id": "761014375856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8ee69d03eebbac3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "RT-PUBLIC-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "RT-PUBLIC-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.IGW-DATACOSMO",
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.nat-gateway.aws_nat_gateway.NGW-DATACOSMO",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-PRIVATE-DATACOSMO-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae2de01fc10c0e51",
            "route_table_id": "rtb-0255c1458dda8eff6",
            "subnet_id": "subnet-0eb89d1a624a599a4"
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.nat-gateway.aws_nat_gateway.NGW-DATACOSMO",
            "module.route-table.aws_route_table.RT-PRIVATE-DATACOSMO",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-PRIVATE-DATACOSMO-2-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb9e1af61b8a8783",
            "route_table_id": "rtb-0255c1458dda8eff6",
            "subnet_id": "subnet-09573f169442e4603"
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.nat-gateway.aws_nat_gateway.NGW-DATACOSMO",
            "module.route-table.aws_route_table.RT-PRIVATE-DATACOSMO",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-PUBLIC-DATACOSMO-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05376e5590821e00d",
            "route_table_id": "rtb-07b32df3b7d45807f",
            "subnet_id": "subnet-0abc9f37eae065a18"
          },
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.IGW-DATACOSMO",
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.nat-gateway.aws_nat_gateway.NGW-DATACOSMO",
            "module.route-table.aws_route_table.RT-PUBLIC-DATACOSMO",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-PUBLIC-DATACOSMO-2-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de11a0ca26915e38",
            "route_table_id": "rtb-07b32df3b7d45807f",
            "subnet_id": "subnet-037faad860f2b041a"
          },
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.IGW-DATACOSMO",
            "module.nat-gateway.aws_eip.NAT-DATACOSMO",
            "module.nat-gateway.aws_nat_gateway.NGW-DATACOSMO",
            "module.route-table.aws_route_table.RT-PUBLIC-DATACOSMO",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PRIVATE-DATACOSMO-02",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-01",
            "module.subnet.aws_subnet.SUB-PUBLIC-DATACOSMO-02",
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.sg_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:security-group/sg-07af92cf55725da0a",
            "description": "Private SG ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07af92cf55725da0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internal service port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "761014375856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private SG",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "tags_all": {
              "Name": "Private SG",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.sg_private_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:security-group/sg-04c396fe2c3c3adbc",
            "description": "Private SG db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c396fe2c3c3adbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internal service port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_db",
            "name_prefix": "",
            "owner_id": "761014375856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private SG",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "tags_all": {
              "Name": "Private SG",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.sg_public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:security-group/sg-009c2eb6c565167d1",
            "description": "Allow SSH, HTTP, HTTPS and 14998/UDP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009c2eb6c565167d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "187.106.3.170/32"
                ],
                "description": "Custom UDP",
                "from_port": 12303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 12303
              },
              {
                "cidr_blocks": [
                  "187.106.3.170/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "187.106.3.170/32"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "187.106.3.170/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-vpn",
            "name_prefix": "",
            "owner_id": "761014375856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public SG bastion",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "tags_all": {
              "Name": "Public SG bastion",
              "environment": "Development",
              "owner": "Breno Kevin Xavier Silva"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUB-PRIVATE-DATACOSMO-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:subnet/subnet-0eb89d1a624a599a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.232.46.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb89d1a624a599a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761014375856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "SUB-PRIVATE-DATACOSMO-01",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "SUB-PRIVATE-DATACOSMO-01",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUB-PRIVATE-DATACOSMO-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:subnet/subnet-09573f169442e4603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.232.45.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09573f169442e4603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761014375856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "SUB-PRIVATE-DATACOSMO-02",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "SUB-PRIVATE-DATACOSMO-02",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUB-PUBLIC-DATACOSMO-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:subnet/subnet-0abc9f37eae065a18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.232.44.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abc9f37eae065a18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761014375856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "SUB-PUBLIC-DATACOSMO-01",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "SUB-PUBLIC-DATACOSMO-01",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUB-PUBLIC-DATACOSMO-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:subnet/subnet-037faad860f2b041a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.232.44.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037faad860f2b041a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761014375856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "SUB-PUBLIC-DATACOSMO-02",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "SUB-PUBLIC-DATACOSMO-02",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "vpc_id": "vpc-0f32bb98809d09932"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC-DATACOSMO"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-DATACOSMO",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:761014375856:vpc/vpc-0f32bb98809d09932",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.232.44.0/22",
            "default_network_acl_id": "acl-0294607a467611372",
            "default_route_table_id": "rtb-0970b130fb0c9f2f4",
            "default_security_group_id": "sg-08833d77c31d253ae",
            "dhcp_options_id": "dopt-0a4cb96719e1422ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f32bb98809d09932",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0970b130fb0c9f2f4",
            "owner_id": "761014375856",
            "tags": {
              "Environment": "Development",
              "Name": "VPC-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "VPC-DATACOSMO",
              "Owner": "Breno Kevin Xavier Silva",
              "Tool": "Terraform"
            }
          }
        }
      ]
    }
  ]
}